# graphiti-influxer-public

./: .gitignore  LICENSE  README.md  gitexporter.config.json  package-lock.json  package.json  pyproject.toml
.claude/: graphiti-claude-integration-installation-state.json  settings.json  shared-claude-rules-installation-state.json
.claude/PRPs/: edge-cases.md
.claude/PRPs/completed/: phase-1-pdf-epub-core.plan.md
.claude/PRPs/plans/: phase-1-web-interface-mvp.plan.md
.claude/PRPs/prds/: graphiti-influxer.prd.md
.claude/prp-memory/working/: context.json
.claude/rules/graphiti-claude-integration/: graphiti.md
.claude/rules/shared-claude-rules/mcp-configurations/: businessmap.md  context7.md  firecrawl.md  github.md  macos-automator.md  morgen.md  unifi.md  vscode.md  whoop.md  xert.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sync-public.yml
src/influxer/: __init__.py  chunker.py  cli.py  config.py  deps.py  mcp_client.py  progress.py  state.py
src/influxer/extractors/: __init__.py  epub.py  ocr.py  pdf.py
tests/fixtures/: sample.epub
