[project]
name = "graphiti-influxer"
version = "0.1.0"
description = "CLI tool to ingest PDF and EPUB documents into Graphiti via MCP"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Mathias Scherer" }
]
keywords = ["graphiti", "mcp", "pdf", "epub", "document", "ingestion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "mcp>=1.9.0",
    "pymupdf4llm>=0.0.17",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "ebooklib>=0.18",
    "langchain-text-splitters>=0.3.0",
    "typer>=0.24.1",
    "rich>=13.9.0",
    "tomli-w>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "chardet>=5.2.0",
    "lxml>=5.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
influxer = "influxer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/influxer"]

[tool.hatch.build.targets.wheel]
packages = ["src/influxer"]
sources = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for Typer)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "ebooklib.*",
    "pymupdf4llm.*",
    "pdfplumber.*",
    "pytesseract.*",
    "pdf2image.*",
    "pypdf.*",
    "bs4.*",
    "chardet.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]
